{
  "version": 4,
  "terraform_version": "1.15.1",
  "serial": 66,
  "lineage": "4608d637-9a98-21ad-46e1-7837567f48f7",
  "resources": [
    {
      "module": "module.ec2.module.ec2_instance",
      "mode": "data",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:619758067038:subnet/subnet-0ba088b36a4290f96",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "available_ip_address_count": 251,
            "cidr_block": "10.0.101.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ba088b36a4290f96",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "619758067038",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "state": "available",
            "tags": {
              "Environment": "dev",
              "Name": "one-man-army-public-1",
              "Tier": "public",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0fe3c598c086576d6"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.ec2.module.ec2_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-08188a5a4dfdbd573",
            "arn": "arn:aws:ec2:ap-south-1:619758067038:instance/i-0966741db456344e7",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0966741db456344e7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "user1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0b2cc942df3d253b0"
              }
            ],
            "primary_network_interface_id": "eni-0b2cc942df3d253b0",
            "private_dns": "ip-10-0-101-59.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.101.59",
            "public_dns": "ec2-13-235-33-35.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.235.33.35",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0ed3827dddafcad17",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ba088b36a4290f96",
            "tags": {
              "Environment": "dev",
              "Name": "single-instance",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "single-instance",
              "Terraform": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Environment": "dev",
              "Name": "single-instance",
              "Terraform": "true"
            },
            "vpc_security_group_ids": [
              "sg-02d39e1f041fff087"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "619758067038",
            "id": "i-0966741db456344e7",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.ec2.module.ec2_instance.aws_iam_instance_profile.this",
            "module.ec2.module.ec2_instance.aws_iam_role.this",
            "module.ec2.module.ec2_instance.aws_security_group.this",
            "module.ec2.module.ec2_instance.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2.module.ec2_instance.data.aws_partition.current",
            "module.ec2.module.ec2_instance.data.aws_ssm_parameter.this",
            "module.ec2.module.ec2_instance.data.aws_subnet.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ec2.module.ec2_instance",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:619758067038:security-group/sg-02d39e1f041fff087",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all IPv4 traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Allow all IPv6 traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02d39e1f041fff087",
            "ingress": [],
            "name": "single-instance-14c6942fa24eaa1067ecf39731",
            "name_prefix": "single-instance-",
            "owner_id": "619758067038",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "single-instance",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "single-instance",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fe3c598c086576d6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "619758067038",
            "id": "sg-02d39e1f041fff087",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.ec2.module.ec2_instance.data.aws_subnet.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ec2.module.ec2_instance",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ipv4_default",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:619758067038:security-group-rule/sgr-0e8ab666e0e8f0ad5",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow all IPv4 traffic",
            "from_port": null,
            "id": "sgr-0e8ab666e0e8f0ad5",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-02d39e1f041fff087",
            "security_group_rule_id": "sgr-0e8ab666e0e8f0ad5",
            "tags": {
              "Environment": "dev",
              "Name": "single-instance-ipv4_default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "single-instance-ipv4_default",
              "Terraform": "true"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "619758067038",
            "id": "sgr-0e8ab666e0e8f0ad5",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.ec2.module.ec2_instance.aws_security_group.this",
            "module.ec2.module.ec2_instance.data.aws_subnet.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "ipv6_default",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:619758067038:security-group-rule/sgr-0e93878edec2cd3be",
            "cidr_ipv4": null,
            "cidr_ipv6": "::/0",
            "description": "Allow all IPv6 traffic",
            "from_port": null,
            "id": "sgr-0e93878edec2cd3be",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-02d39e1f041fff087",
            "security_group_rule_id": "sgr-0e93878edec2cd3be",
            "tags": {
              "Environment": "dev",
              "Name": "single-instance-ipv6_default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "single-instance-ipv6_default",
              "Terraform": "true"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "619758067038",
            "id": "sgr-0e93878edec2cd3be",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.ec2.module.ec2_instance.aws_security_group.this",
            "module.ec2.module.ec2_instance.data.aws_subnet.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09cfe0e1cab3a1511",
            "arn": "arn:aws:ec2:ap-south-1:619758067038:elastic-ip/eipalloc-09cfe0e1cab3a1511",
            "domain": "vpc",
            "id": "eipalloc-09cfe0e1cab3a1511",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-13-127-125-141.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.127.125.141",
            "public_ipv4_pool": "amazon",
            "region": "ap-south-1",
            "tags": {
              "Name": "one-man-army-dev-nat-eip"
            },
            "tags_all": {
              "Name": "one-man-army-dev-nat-eip"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "619758067038",
            "id": "eipalloc-09cfe0e1cab3a1511",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:619758067038:internet-gateway/igw-023a8a0b17cf75207",
            "id": "igw-023a8a0b17cf75207",
            "owner_id": "619758067038",
            "region": "ap-south-1",
            "tags": {
              "Name": "one-man-army-dev-igw"
            },
            "tags_all": {
              "Name": "one-man-army-dev-igw"
            },
            "vpc_id": "vpc-0fe3c598c086576d6"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "619758067038",
            "id": "igw-023a8a0b17cf75207",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09cfe0e1cab3a1511",
            "association_id": "eipassoc-01b7ed5b7f431c22e",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-094da2474a588f0fa",
            "network_interface_id": "eni-03cc02000737408ea",
            "private_ip": "10.0.101.118",
            "public_ip": "13.127.125.141",
            "region": "ap-south-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0ba088b36a4290f96",
            "tags": {
              "Name": "one-man-army-dev-nat"
            },
            "tags_all": {
              "Name": "one-man-army-dev-nat"
            },
            "vpc_id": "vpc-0fe3c598c086576d6"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "619758067038",
            "id": "nat-094da2474a588f0fa",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:619758067038:route-table/rtb-0eb26d7129d48a4a5",
            "id": "rtb-0eb26d7129d48a4a5",
            "owner_id": "619758067038",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-094da2474a588f0fa",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "one-man-army-private-rt"
            },
            "tags_all": {
              "Name": "one-man-army-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fe3c598c086576d6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "619758067038",
            "id": "rtb-0eb26d7129d48a4a5",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:619758067038:route-table/rtb-0998d7927a7482988",
            "id": "rtb-0998d7927a7482988",
            "owner_id": "619758067038",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-023a8a0b17cf75207",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "one-man-army-public-rt"
            },
            "tags_all": {
              "Name": "one-man-army-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fe3c598c086576d6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "619758067038",
            "id": "rtb-0998d7927a7482988",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04e76bd7c3ee7b0fc",
            "region": "ap-south-1",
            "route_table_id": "rtb-0eb26d7129d48a4a5",
            "subnet_id": "subnet-0c97d544036ed6a7e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "619758067038",
            "id": "rtbassoc-04e76bd7c3ee7b0fc",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-099248982e261e13b",
            "region": "ap-south-1",
            "route_table_id": "rtb-0eb26d7129d48a4a5",
            "subnet_id": "subnet-0693ff9a73bbd0164"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "619758067038",
            "id": "rtbassoc-099248982e261e13b",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-033eeb776584333fd",
            "region": "ap-south-1",
            "route_table_id": "rtb-0998d7927a7482988",
            "subnet_id": "subnet-0ba088b36a4290f96"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "619758067038",
            "id": "rtbassoc-033eeb776584333fd",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0073e2abf7499c702",
            "region": "ap-south-1",
            "route_table_id": "rtb-0998d7927a7482988",
            "subnet_id": "subnet-081fa34be323a5174"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "619758067038",
            "id": "rtbassoc-0073e2abf7499c702",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:619758067038:subnet/subnet-0c97d544036ed6a7e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c97d544036ed6a7e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "619758067038",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Environment": "dev",
              "Name": "one-man-army-private-1",
              "Tier": "private",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "one-man-army-private-1",
              "Tier": "private",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0fe3c598c086576d6"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "619758067038",
            "id": "subnet-0c97d544036ed6a7e",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:619758067038:subnet/subnet-0693ff9a73bbd0164",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0693ff9a73bbd0164",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "619758067038",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Environment": "dev",
              "Name": "one-man-army-private-2",
              "Tier": "private",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "one-man-army-private-2",
              "Tier": "private",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0fe3c598c086576d6"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "619758067038",
            "id": "subnet-0693ff9a73bbd0164",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:619758067038:subnet/subnet-0ba088b36a4290f96",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ba088b36a4290f96",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "619758067038",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Environment": "dev",
              "Name": "one-man-army-public-1",
              "Tier": "public",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "one-man-army-public-1",
              "Tier": "public",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0fe3c598c086576d6"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "619758067038",
            "id": "subnet-0ba088b36a4290f96",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:619758067038:subnet/subnet-081fa34be323a5174",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-081fa34be323a5174",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "619758067038",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Environment": "dev",
              "Name": "one-man-army-public-2",
              "Tier": "public",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "one-man-army-public-2",
              "Tier": "public",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0fe3c598c086576d6"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "619758067038",
            "id": "subnet-081fa34be323a5174",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:619758067038:vpc/vpc-0fe3c598c086576d6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0bb063982676f153e",
            "default_route_table_id": "rtb-058727a1136586109",
            "default_security_group_id": "sg-00271e2343a218483",
            "dhcp_options_id": "dopt-051cbb21fe4d20e10",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0fe3c598c086576d6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-058727a1136586109",
            "owner_id": "619758067038",
            "region": "ap-south-1",
            "tags": {
              "Name": "one-man-army-dev-vpc"
            },
            "tags_all": {
              "Name": "one-man-army-dev-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "619758067038",
            "id": "vpc-0fe3c598c086576d6",
            "region": "ap-south-1"
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}